# exifmate

./: .gitignore  LICENSE  README.md  biome.json  electron.cjs  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts  vite.renderer.config.ts
.github/workflows/: ci.yml  main.yml
__mocks__/@tauri-apps/: plugin-fs.ts
__mocks__/react-map-gl/: maplibre.tsx
app/: main.cjs  preload.cjs
exifmate/: __init__.py  bridge.py  editable_metadata.json  metadata.py  view.qml
src/: App.css.ts  App.module.css  App.tsx  ImageContext.tsx  ImageGrid.tsx  MapField.tsx  MetadataEditor.tsx  app-menu.ts  bridge.py  declarations.d.ts  editable_metadata.json  file-manager.ts  file_list_widget.py  main.py  main.ts  main.tsx  main_window.py  metadata-handler.ts  preload.ts  renderer.tsx  state.py  theme.css.ts  theme.ts  util.ts  view.qml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/Editor/: ExifInput.css.ts  ExifInput.tsx  ExifTab.tsx  LocationTab.css.ts  LocationTab.tsx  MetadataEditor.css.ts  MetadataEditor.module.css  MetadataEditor.tsx  useExif.tsx
src/ImageGrid/: ImageGrid.css.ts  ImageGrid.tsx
src/MapField/: Locationmarker.tsx  MapField.tsx
src/Shell/: Shell.css.ts  Shell.tsx
src/__specs__/: ImageContext.spec.tsx
src/components/: ImageGrid.qml  InfoSection.qml
src/core/: app-menu.ts  dayjs.ts  events.ts  file-manager.ts  metadata-handler.ts  types.ts  (+1 more)
test-support/: test-utils.tsx  vitest-setup.ts
tests/: metadata_test.py
(+13 files in other folders)
